Added ClusterLink service functionality