@@ -19,7 +19,7 @@
 
     <properties>
         <java.version>17</java.version>
-        <kafka.version>8.1.1-ccs</kafka.version>
+        <kafka.version>8.1.1-ce</kafka.version>
     </properties>
 
     <repositories>
@@ -62,6 +62,14 @@
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.1.2</version>
+                <configuration>
+                    <argLine>-Dnet.bytebuddy.experimental=true</argLine>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
